Fixed contrast issues for dark mode browsers

--- a/src/style.css
+++ b/src/style.css
@@ -10,20 +10,15 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #ffffff;
-
-  /* font-synthesis: none; */
-  /* text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
   text-decoration: inherit;
+  color:  #d50000;
 }
 a:hover {
-  color: #535bf2;
+  color:  #d50000;
 }
 
 html, body {
@@ -53,12 +48,6 @@ h1 {
   will-change: filter;
   transition: filter 300ms;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.vanilla:hover {
-  filter: drop-shadow(0 0 2em #3178c6aa);
-}
 
 .read-the-docs {
   color: #888;
@@ -72,16 +61,22 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #d50000;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  outline: none;
+  box-shadow: none;
+}
+
+/* Remove focus ring for collapse/show button */
+button[data-toggle-details]:focus,
+button[data-toggle-details]:focus-visible {
+  outline: none;
+  box-shadow: none;
 }
 
 .demo-banner {
@@ -93,8 +88,15 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
-    color: #747bff;
+  button {
+    background-color: #f9f9f9;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
   }
   button {
     background-color: #f9f9f9;
